# IsaacTeleop-Foottroller

./: .coderabbit.yaml  AGENTS.md  CMakeLists.txt  README.md  REUSE.toml
.claude/skills/cmake-structure/: SKILL.md
.cursor/rules/: cmake-structure.mdc
.github/: PULL_REQUEST_TEMPLATE.md
.github/actions/build-cloudxr-web-client/: action.yml
.github/instructions/: cmake-structure.instructions.md
.github/workflows/: build-ubuntu.yml  build-windows.yml  docs.yaml  pre-commit.yaml  promote-stable-client.yaml  sync-github-project-to-sheets.yml
cmake/: cmake-structure.md
docs/source/getting_started/: quick_start.rst
docs/source/getting_started/build_from_source/: index.rst
docs/source/overview/: ecosystem.rst
examples/camera_viz/: README.md  camera_viz.py  pyproject.toml
examples/camera_viz/configs/: synthetic_window.yaml  synthetic_xr_3up.yaml
examples/camera_viz/pipeline/: __init__.py  interface.py  runner.py
examples/camera_viz/placements/: __init__.py  _math.py  lock_modes.py
examples/camera_viz/sources/: __init__.py  synthetic.py
examples/teleop/python/: foottroller_locomotion_example.py
examples/teleop_ros2/: AGENTS.md  CMakeLists.txt  README.md
examples/teleop_ros2/cpp/integration_tests/: CMakeLists.txt  mcap_generator.cpp
examples/teleop_ros2/python/: node_parameters.py  teleop_ros2_node.py
examples/teleop_ros2/python/integration_tests/: teleop_ros2_topic_verifier.py
scripts/: check_cloudxr_eula.sh  download_cloudxr_runtime_sdk.sh  download_cloudxr_sdk.sh  run_cloudxr_via_docker.sh  run_tests_with_cloudxr.sh  setup_cloudxr_env.sh  setup_v2d_src.sh
src/core/cloudxr/python/: __main__.py
src/core/deviceio_base/cpp/inc/deviceio_base/: foottroller_tracker_base.hpp
src/core/deviceio_trackers/cpp/: CMakeLists.txt  foottroller_tracker.cpp
src/core/deviceio_trackers/cpp/inc/deviceio_trackers/: foottroller_tracker.hpp
src/core/deviceio_trackers/python/: deviceio_trackers_init.py  tracker_bindings.cpp
src/core/live_trackers/cpp/: CMakeLists.txt  live_deviceio_factory.cpp  live_foottroller_tracker_impl.cpp  live_foottroller_tracker_impl.hpp
src/core/live_trackers/cpp/inc/live_trackers/: live_deviceio_factory.hpp
src/core/mcap/cpp/inc/mcap/: recording_traits.hpp
src/core/python/: CMakeLists.txt  deviceio_init.py  pyproject.toml.in
src/core/replay_trackers/cpp/: CMakeLists.txt  replay_deviceio_factory.cpp  replay_foottroller_tracker_impl.cpp  replay_foottroller_tracker_impl.hpp
src/core/replay_trackers/cpp/inc/replay_trackers/: replay_deviceio_factory.hpp
src/core/retargeting_engine/python/deviceio_source_nodes/: __init__.py  deviceio_tensor_types.py  foottroller_source.py
src/core/retargeting_engine/python/tensor_types/: __init__.py  indices.py  standard_types.py
src/core/schema/fbs/: foottroller.fbs
src/core/schema/python/: foottroller_bindings.h  schema_init.py  schema_module.cpp
src/plugins/foottroller/: CMakeLists.txt  README.md  foottroller_plugin.cpp  foottroller_plugin.hpp  main.cpp  plugin.yaml
src/plugins/haptikos/: .gitignore  CMakeLists.txt  README.md  haptikos_hands_plugin.cpp  main.cpp  plugin.yaml
src/plugins/haptikos/inc/haptikos/: haptikos_hands_plugin.hpp
src/plugins/manus/: .gitignore  install_manus.sh  install_udev_rules.sh
src/postprocessing/egocentric_hand_reconstruction/docker/: dynhamr.sh  setup_dynhamr.sh  vipe.sh
src/postprocessing/egocentric_hand_reconstruction/mesh_generation/: generate_mesh.sh
src/postprocessing/egocentric_hand_reconstruction/quality_control/: run_jumpy_qc.sh
src/postprocessing/egocentric_hand_reconstruction/scripts/: run_mesh_generation.sh  run_reconstruction.sh
src/retargeters/: __init__.py  foottroller_retargeter.py
src/viz/: CMakeLists.txt
src/viz/core/cpp/: CMakeLists.txt  device_image.cpp  frame_sync.cpp  render_target.cpp  vk_context.cpp
src/viz/core/cpp/inc/viz/core/: device_image.hpp  host_image.hpp  render_target.hpp
src/viz/core_tests/cpp/: CMakeLists.txt  test_device_image.cpp  test_frame_sync.cpp  test_render_target.cpp  test_vk_context.cpp
src/viz/layers/cpp/: CMakeLists.txt  quad_layer.cpp
src/viz/layers_testing/: CMakeLists.txt
src/viz/layers_testing/cpp/: CMakeLists.txt  clear_rect_layer.cpp
src/viz/layers_testing/cpp/inc/viz/layers/testing/: clear_rect_layer.hpp  throwing_layer.hpp
src/viz/layers_tests/cpp/: CMakeLists.txt  test_quad_layer.cpp
src/viz/python/: CMakeLists.txt  bindings_helpers.hpp  core_bindings.cpp  layers_bindings.cpp  session_bindings.cpp  viz_bindings.cpp  viz_init.py
src/viz/python_tests/: CMakeLists.txt  pyproject.toml  test_array_interface.py  test_offscreen_session.py  test_viz_import.py
src/viz/session/cpp/: CMakeLists.txt  glfw_window.cpp  offscreen_backend.cpp  swapchain.cpp  tile_layout.cpp  viz_compositor.cpp  viz_session.cpp  window_backend.cpp  xr_backend.cpp
src/viz/session/cpp/inc/viz/session/: offscreen_backend.hpp  viz_session.hpp  window_backend.hpp  xr_backend.hpp
src/viz/session_tests/cpp/: test_offscreen_render.cpp  test_perf_audit.cpp  test_quad_milestone.cpp  test_viz_session.cpp  test_window_primitives.cpp
src/viz/test_support/: CMakeLists.txt
src/viz/test_support/cpp/: CMakeLists.txt
src/viz/test_support/cpp/inc/viz/test_support/: test_helpers.hpp
src/viz/xr/cpp/: CMakeLists.txt  openxr_session.cpp  xr_runtime.cpp
