# SPDX-FileCopyrightText: Copyright (c) 2026 NVIDIA CORPORATION & AFFILIATES. All rights reserved.
# SPDX-License-Identifier: Apache-2.0

cmake_minimum_required(VERSION 3.20)

# Test-only fixture library: concrete LayerBase subclasses that downstream
# tests compose into VizSession to verify compositor behavior. Not shipped to consumers.
add_library(viz_layers_testing STATIC
    clear_rect_layer.cpp
    inc/viz/layers/testing/clear_rect_layer.hpp
    inc/viz/layers/testing/throwing_layer.hpp
)

target_include_directories(viz_layers_testing
    INTERFACE
        $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/inc>
)

target_link_libraries(viz_layers_testing
    PUBLIC
        viz::core
        viz::layers
)

add_library(viz::layers_testing ALIAS viz_layers_testing)
